# string-embed

./: .gitignore  LICENSE  README.md  bound.ipynb  datasets.py  distance_estimation_cgk.py  distance_estimation_l2.py  embed_cgk.py  embed_cnn.py  hamming_sorter.py  k_medoids.py  main.py  networks.py  nns.py  nns_multi_embed.py  plot.py  requirements.txt  sorter.py  test.py  threshodl_nns.ipynb  trainer.py  utils.py
data/: generate.py  word
data/word/: word
ground/: Makefile  ground_truth.cpp  readme.md
ground/utils/: ground_truth.hpp  heap.hpp  reader.hpp
ground/utils/edlib/: edlib.cpp  edlib.h
k_medoids/: CMakeLists.txt  convert_tool.cc  graph.cc  k_medoids.cc  progress_bar.h  run.sh  utils.h  verification.h
